--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1283.0",
     "react-native-paper": "^4.12.1",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-settings-screen": "^2.2.1",
     "react-native-vector-icons": "^9.1.0",
