--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~44.0.0",
+    "expo-cli": "^5.4.6",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1283.0",
+    "react-native-formatted-text": "^0.1.5",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "~3.10.1",
